# fastqr

.github/workflows/: ci.yml  playground-pages.yml
crates/fastqr_core/src/: bit_grid.rs  types.rs
crates/fastqr_image/src/: binary.rs  decode.rs  detect.rs  render.rs
crates/fastqr_wasm/: Cargo.toml
npm/fastqr/scripts/: build-browser-artifact.mjs
